# ML-project

./: README.md  setup.cfg
my_research/scripts/: mr_compute_intensity_histogram.py
my_research/utils/: image.py
