[metadata]
name = my_research
url = https://github.com/minilabus/base_personal_research
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = None
description = Template to start a personal research code base
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
setup_requires = 
    setuptools>=61.0
    setuptools-scm
install_requires =
    numpy
    dipy
    fury
    scipy
    vtk
    matplotlib
    nibabel >= 3.0

[options.extras_require]
test =
    flake8
    fury
    dipy

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    mr_compute_intensity_histogram = my_research.scripts.mr_compute_intensity_histogram:main
